--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -107,7 +107,7 @@
      <None Include="Assets\Landmarks\Text Files\old\TintersectionQuestions1.txt" />
      <None Include="Assets\Landmarks\Shaders\Resources\FastTreeCreatorLeaves.shader" />
      <None Include="Assets\Landmarks\Text Files\old\question_list_2.txt" />
-     <None Include="Assets\Landmarks\Text Files\old\deliveryInstrux.txt" />
+     <None Include="Assets\Landmarks\Text Files\current\instructions_navigate.txt" />
      <None Include="Assets\Unknown Assets\Mobile-Cartoony\ReadMe.txt" />
      <None Include="Assets\Landmarks\Shaders\Alpha-Cancel.shader" />
      <None Include="Assets\Landmarks\Levels\Demo\3DeliveryFound\3_level_description.txt" />
@@ -127,7 +127,7 @@
      <None Include="Assets\Unknown Assets\Mobile-Cartoony\ThirdParty\NGUI\Resources\Shaders\Unlit - Transparent Colored (AlphaClip).shader" />
      <None Include="Assets\Landmarks\Text Files\old\questions_allo.txt" />
      <None Include="Assets\Landmarks\Text Files\old\count.txt" />
-     <None Include="Assets\Landmarks\Text Files\current\list_bigCityCyberith_168.txt" />
+     <None Include="Assets\Landmarks\Text Files\current\list_bigCityCyberith_aligned.txt" />
      <None Include="Assets\Landmarks\Text Files\old\PointingPractice.txt" />
      <None Include="Assets\Landmarks\Text Files\old\question_list.txt" />
      <None Include="Assets\Landmarks\Shaders\BillboardTree.shader" />
@@ -161,7 +161,7 @@
      <None Include="Assets\Landmarks\Text Files\old\instruct.txt" />
      <None Include="Assets\Landmarks\Text Files\old\BeginDay.txt" />
      <None Include="Assets\Landmarks\unprocessed\WaterSources\FX-Water.shader" />
-     <None Include="Assets\Landmarks\Text Files\old\Compass_Instructions.txt" />
+     <None Include="Assets\Landmarks\Text Files\current\instructions_jrd.txt" />
      <None Include="Assets\Unknown Assets\Mobile-Cartoony\ThirdParty\NGUI\Resources\Shaders\Unlit - Transparent Colored (Packed).shader" />
      <None Include="Assets\Landmarks\Text Files\old\return_to_bus.txt" />
      <None Include="Assets\Landmarks\Text Files\old\introtemporal.txt" />
